		- C343-305 "Attacking with an applied polearm ignores the "confirm" option." (from GruntHack)
		- C343-81 "Ghosts can be slimed."
		- C343-118 "Some messages use "mirror" where they should use "looking glass."" (from GruntHack)
		- C343-302 "Amnesia of object discoveries may forget to forget one thing."
		- C343-134 "Being petrified by swallowing a cockatrice violates foodless conduct."
		Patches are linked at http://nethackwiki.com/wiki/User:Bulwersator/UnNetHackPlus_bug_tracking
	* UnNetHack bug fixes
		- #143 Angered quest guardians will no longer go berserk.
		- #152 Wishing for unknown dragon scales with its actual name results in dragon scale mail (outside of debug mode)
		- #154 Petrification may cause desintegration, desintegration may cause petrification
		- small fixes to options help (opthelp file)
	* Flavour stuff
		- Far look during hallucination should be more amusing
		- New hallucinatory monsters, monster sounds (original ones and from NAO) and bottle types
		- More random gravestone epitaphs (from NAO and original ones)
		- More t-shirt messages (from NAO and original ones)
		- Names for player statues on Medusa level are now based on list of people petrified by Medusa on public servers instead of top ten local players.
		- Kobolds vs elves grudge added
		- Dipping a wand of nothing into a potion of gain ability polymorphs the wand (Wands and Gain Ability 0.1 by Grunt)
		- Trees planted on: quest levels of wizard and samurai, nymph level
		- Tree Cutting v1.0 by Michael Lehotay
	* Starting equipment changes
		- Gnomes may start with candles (idea from dnethack), and dwarves with pickaxe (from SporkHack)
		- Orcs start game with sickness potion (from Sporkhack)
		- Wizards may start with cloak of protection/invisibility/displacement/robe/oilskin cloak/alchemy smock (based on idea from Sporkhack)
		- Scroll of identify universally known (from SporkHack)
		- Wearing fedora increases luck of archaeologists